test/parser/lambda/lambda_missing_lpar.yl
// RUN: compiler %s -ast-dump 2>&1 | filecheck %s
fn main() {
  // CHECK: [[# @LINE + 1 ]]:5: error: expected '('
  ->x) {};
}
